fix: fixed msa page design break on load

--- a/src/Features/MSA/IndividualMSA/MsaDoc/MsaDoc.module.css
+++ b/src/Features/MSA/IndividualMSA/MsaDoc/MsaDoc.module.css
@@ -6,7 +6,7 @@
   font-family: "Montserrat", sans-serif;
   border-radius: 8px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.253);
-  height: 20.8rem;
+  height: 22.7rem;
 }
 
 .title {
