--- a/src/Features/MSA/IndividualMSA/NewIndividualMSA.module.css
+++ b/src/Features/MSA/IndividualMSA/NewIndividualMSA.module.css
@@ -12,8 +12,8 @@
 .maincontainer__revenue {
   border: solid 1px #ffffff;
   width: 59.5vw;
-  min-height: 26rem;
-  margin-top: -4.5rem;
+  min-height: 28rem;
+  margin-top: -2rem;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.253);
   border-radius: 10px;
 }
@@ -26,7 +26,7 @@
 }
 .maincontainer__doclist {
   width: 15rem;
-  margin-left: -4.7rem;
+  margin-left: 1rem;
   border-radius: 10px;
 }
 
